# WindowFlow

./: .gitignore  CHECKPOINT-REVIEW.md  README.md  TOOLCHAIN-ASSESSMENT.md  TOOLCHAIN-REQUIREMENTS.md  check-environment.ps1  create-icon.ps1  index.html  install-toolchain.ps1  setup-toolchain.ps1  verify-system-deps.ps1
.github/workflows/: deploy-pages.yml
docs/superpowers/plans/: 2026-07-12-windowflow-implementation.md  2026-07-12-windowflow-tasks.md
docs/superpowers/specs/: 2026-07-12-window-migration-tool-design.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: flash.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutDialog.tsx  FloatingPanel.tsx  MissionControlCard.tsx  RecommendationCard.tsx  RecommendationSection.tsx  SettingsWindow.tsx  WindowThumbnail.tsx
frontend/src/contexts/: ThemeContext.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/services/: algorithms.rs  crypto_key.rs  database.rs  mod.rs  online_model.rs  process_monitor.rs  recommendation.rs  thumbnail_cache.rs  window_manager.rs
